Complete lifting state lab with ingredient list and burger stack functionality

--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,9 @@ main {
 
 section {
   width: 80%;
+  height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  gap: 20px;
 }
 
 h1 {
@@ -47,16 +47,19 @@ h1 {
 }
 
 ul {
-  width: 100%;
-  height: 100%;
-
+  flex: 1;
+  min-height: 80vh;
   margin: 0;
   padding: 16px;
   list-style: none;
+  border: 1px solid #444;
+  border-radius: 8px;
+  background-color: #333;
 
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  overflow-y: auto;
 }
 
 li {
@@ -76,4 +79,6 @@ button {
   border-radius: 8px;
   background-color: #1a1a1a;
   border: 1px solid transparent;
+  padding: 4px 8px;
+  margin-left: 8px;
 }
